--- a/index.html
+++ b/index.html
@@ -423,6 +423,18 @@
               <a class="btn" href="#" id="furuyoniNotes">研究メモ（準備中）</a>
             </div>
           </section>
+
+          <section class="card">
+             <div class="badge"><span>🌙</span> おやすみ日記</div>
+               <h3>夜に書くひとこと</h3>
+                 <p>
+                   その日の気持ちや出来事を、やさしく置いていく場所。
+                 </p>
+             <div class="btnrow">
+                <a class="btn primary" href="oyasumi.html">日記を読む</a>
+             </div>
+          </section>
+
         </div>
       </section>
 
