--- a/omoitsuki.html
+++ b/omoitsuki.html
@@ -93,7 +93,7 @@ p{
 
 <header>
   <div>📝 思いつきの倉庫</div>
-  <a href="index.html">← 研究ルームへ戻る</a>
+  <a href="memos.html">← 研究メモへ戻る</a>
 </header>
 
 <div class="container">
