--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             </p>
             <div class="btnrow">
               <a class="btn primary" href="#" id="deckBuilder">デッキ構築システム（制作中）</a>
-              <a class="btn" href="#" id="furuyoniNotes">研究メモ（準備中）</a>
+              <a class="btn primary" href="memos.html">研究メモ</a>
             </div>
           </section>
 
@@ -490,7 +490,6 @@
     const YOUTUBE_CHANNEL_URL = "https://www.youtube.com/channel/UCrXd_KijTSd_iNUo2H32t0A";   // 例: "https://www.youtube.com/@yourchannel"
     const LATEST_URL = "https://youtube.com/live/twx6W-o1ulI";            // 例: 最新動画や配信のURL
     const DECK_BUILDER_URL = "";      // 例: あなたのデッキ構築システムのURL
-    const FURUYONI_NOTES_URL = "memos.html";    // 例: 研究メモページ（後で作る）
     const SCHEDULE_TUE_URL = "https://youtube.com/live/88f58ieyVBA"; // 配信URL
     const SCHEDULE_WED_URL = ""; // 動画URL
     const SCHEDULE_THU_URL = "https://youtube.com/live/4cIe7VT4Qu8"; // 参加型URL
@@ -515,7 +514,6 @@
     setLink("youtubeLink", YOUTUBE_CHANNEL_URL);
     setLink("watchLatest", LATEST_URL);
     setLink("deckBuilder", DECK_BUILDER_URL);
-    setLink("furuyoniNotes", FURUYONI_NOTES_URL);
     
     setLink("scheduleTue", SCHEDULE_TUE_URL);
     setLink("scheduleWed", SCHEDULE_WED_URL);
