--- a/memos.html
+++ b/memos.html
@@ -101,7 +101,7 @@ h1{
 <body>
 <header>
   <div>🧪 研究メモ</div>
-  <a href="index.html">← 研究ルームへ戻る</a>
+  <a href="index.html">← しおんのボドゲ部屋へ戻る</a>
 </header>
 
 <div class="container">
@@ -125,4 +125,5 @@ h1{
   </div>
 </div>
 </body>
+
 </html>
