--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     const LATEST_URL = "https://youtube.com/live/twx6W-o1ulI";            // 例: 最新動画や配信のURL
     const DECK_BUILDER_URL = "";      // 例: あなたのデッキ構築システムのURL
     const SCHEDULE_TUE_URL = "https://youtube.com/live/88f58ieyVBA"; // 配信URL
-    const SCHEDULE_WED_URL = ""; // 動画URL
+    const SCHEDULE_WED_URL = "https://youtu.be/IMyrrpWHIhw"; // 動画URL
     const SCHEDULE_THU_URL = "https://youtube.com/live/4cIe7VT4Qu8"; // 参加型URL
     const SCHEDULE_SAT_URL = ""; // 調整枠（配信するならURL / 休みなら空でOK）
 
@@ -530,3 +530,4 @@
   </script>
 </body>
 </html>
+
