--- a/oyasumi.html
+++ b/oyasumi.html
@@ -52,6 +52,10 @@
   </style>
 </head>
 <body>
+<header>
+  <div>🌙 おやすみ日記</div>
+  <a href="index.html">← しおんのボドゲ部屋へ戻る</a>
+</header>
 
 <div class="container">
 
@@ -80,3 +84,4 @@
 </body>
 
 </html>
+
