--- a/oyasumi.html
+++ b/oyasumi.html
@@ -15,6 +15,25 @@
     padding:60px 20px;
   }
 
+  header{
+    padding:18px 24px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    background: rgba(255,255,255,.06);
+    backdrop-filter: blur(6px);
+    border-bottom:1px solid rgba(255,255,255,.15);
+  }
+
+  header a{
+    text-decoration:none;
+    font-size:14px;
+    color:var(--text);
+    opacity:.7;
+  }
+    
+  header a:hover{ opacity:1; }
+
   .container{
     max-width:720px;
     margin:0 auto;
@@ -84,4 +103,5 @@
 </body>
 
 </html>
+
 
