--- a/oyasumi.html
+++ b/oyasumi.html
@@ -16,7 +16,7 @@
   }
 
   header{
-    padding:18px 24px;
+    padding:0px;
     display:flex;
     align-items:center;
     justify-content:space-between;
@@ -103,5 +103,6 @@
 </body>
 
 </html>
+
 
 
