--- a/oyasumi.html
+++ b/oyasumi.html
@@ -16,7 +16,7 @@
   }
 
   header{
-    padding:0px;
+    padding:18px 24px;
     display:flex;
     align-items:center;
     justify-content:space-between;
@@ -103,6 +103,7 @@
 </body>
 
 </html>
+
 
 
 
