--- a/oyasumi.html
+++ b/oyasumi.html
@@ -12,7 +12,6 @@
     background-size: cover;
     color:#f5f5f5;
     min-height:100vh;
-    padding:60px 20px;
   }
 
   header{
@@ -36,7 +35,7 @@
 
   .container{
     max-width:720px;
-    margin:0 auto;
+    margin:60px auto;
     background: rgba(255,255,255,.06);
     backdrop-filter: blur(8px);
     border-radius:20px;
@@ -103,7 +102,3 @@
 </body>
 
 </html>
-
-
-
-
