--- a/oyasumi.html
+++ b/oyasumi.html
@@ -22,6 +22,9 @@
     background: rgba(255,255,255,.06);
     backdrop-filter: blur(6px);
     border-bottom:1px solid rgba(255,255,255,.15);
+    position:sticky;
+    top:0;
+    z-index:10;
   }
 
   header a{
