--- a/index.html
+++ b/index.html
@@ -442,6 +442,20 @@
                 <a class="btn primary" href="oyasumi.html">日記を読む</a>
              </div>
           </section>
+   
+          <section class="card room-make" role="listitem" aria-label="制作ルーム">
+            <div class="badge">
+               <img src="mikan.png" class="roomIcon" alt="制作ルーム">
+               制作ルーム
+            </div>
+            <h3>世界を作る部屋</h3>
+            <p>
+              あなたの世界観、形にしませんか。
+            </p>
+            <div class="btnrow">
+              <a class="btn" href="/service/">制作ページ</a>
+            </div>
+          </section>
 
         </div>
       </section>
@@ -491,7 +505,7 @@
     const LATEST_URL = "https://youtube.com/live/twx6W-o1ulI";            // 例: 最新動画や配信のURL
     const DECK_BUILDER_URL = "";      // 例: あなたのデッキ構築システムのURL
     const SCHEDULE_TUE_URL = "https://youtube.com/live/88f58ieyVBA"; // 配信URL
-    const SCHEDULE_WED_URL = "https://youtu.be/IMyrrpWHIhw"; // 動画URL
+    const SCHEDULE_WED_URL = ""; // 動画URL
     const SCHEDULE_THU_URL = "https://youtube.com/live/4cIe7VT4Qu8"; // 参加型URL
     const SCHEDULE_SAT_URL = ""; // 調整枠（配信するならURL / 休みなら空でOK）
 
@@ -530,4 +544,3 @@
   </script>
 </body>
 </html>
-
