--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
       transform: translateY(-6px);
       box-shadow: 0 20px 45px rgba(58,47,40,.12);
     }
+
+    /* 各部屋設定 */
     .room-roomy{
       border: 2px solid rgba(255,160,80,.45);
       background: rgba(255,255,255,.96);
@@ -151,6 +153,13 @@
       background: rgba(255,255,255,.96);
       position: relative;
     }
+    ,room-make{
+      border: 2px solid rgba(120, 160, 135, 0.8);
+      box-shadow: 0 14px 32px rgba(95, 135, 110, 0.9);
+      background: rgba(255,255,255,.96);
+      position: relative;
+    }
+
     .badge{
       display:inline-flex;
       align-items:center;
@@ -453,7 +462,7 @@
               あなたの世界観、形にしませんか。
             </p>
             <div class="btnrow">
-              <a class="btn" href="/service/">制作ページ</a>
+              <a class="btn" href="/service/service.html">制作ページ</a>
             </div>
           </section>
 
