--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       background: rgba(255,255,255,.96);
       position: relative;
     }
-    ,room-make{
+    .room-make{
       border: 2px solid rgba(120, 160, 135, 0.8);
       box-shadow: 0 14px 32px rgba(95, 135, 110, 0.9);
       background: rgba(255,255,255,.96);
