--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     }
     .room-make{
       border: 2px solid rgba(120, 160, 135, 0.8);
-      box-shadow: 0 14px 32px rgba(95, 135, 110, 0.9);
+      box-shadow: 0 14px 32px rgba(95, 135, 110, .09);
       background: rgba(255,255,255,.96);
       position: relative;
     }
@@ -552,4 +552,5 @@
     });
   </script>
 </body>
+
 </html>
