--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
     .room-roomy{
       border: 2px solid rgba(255,160,80,.45);
       background: rgba(255,255,255,.96);
-      box-shadow: 0 14px 32px rgba(255,160,80,.08);
+      box-shadow: 0 14px 32px rgba(255,160,80, 0.1);
     }
     .room-research{
       border: 2px solid rgba(255,170,190,.45);
-      box-shadow: 0 14px 32px rgba(255,170,190,.06);
+      box-shadow: 0 14px 32px rgba(255,170,190, 0.1);
       background: rgba(255,255,255,.96);
       position: relative;
     }
@@ -149,13 +149,13 @@
     }
     .room-oyasumi{
       border: 2px solid rgba(100, 130, 210, 0.55);
-      box-shadow: 0 14px 32px rgba(100, 130, 210,.15);
+      box-shadow: 0 14px 32px rgba(100, 130, 210, 0.1);
       background: rgba(255,255,255,.96);
       position: relative;
     }
     .room-make{
       border: 2px solid rgba(120, 160, 135, 0.8);
-      box-shadow: 0 14px 32px rgba(95, 135, 110, .09);
+      box-shadow: 0 14px 32px rgba(95, 135, 110, 0.1);
       background: rgba(255,255,255,.96);
       position: relative;
     }
@@ -454,7 +454,7 @@
    
           <section class="card room-make" role="listitem" aria-label="制作ルーム">
             <div class="badge">
-               <img src="mikan.png" class="roomIcon" alt="制作ルーム">
+               <img src="make.png" class="roomIcon" alt="制作ルーム">
                制作ルーム
             </div>
             <h3>世界を作る部屋</h3>
@@ -552,5 +552,4 @@
     });
   </script>
 </body>
-
 </html>
