--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
               <a class="btn primary" href="memos.html">研究メモ</a>
             </div>
           </section>
-
+          
           <section class="card room-oyasumi" role="listitem" aria-label="おやすみ日記">
              <div class="badge">
              <img src="oyasumi.png" class="roomIcon" alt="おやすみ日記">
@@ -462,7 +462,7 @@
               あなたの世界観、形にしませんか。
             </p>
             <div class="btnrow">
-              <a class="btn" href="/service/service.html">制作ページ</a>
+              <a class="btn" href="../service.html">制作ページ</a>
             </div>
           </section>
 
@@ -552,4 +552,5 @@
     });
   </script>
 </body>
+
 </html>
