--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
               あなたの世界観、形にしませんか。
             </p>
             <div class="btnrow">
-              <a class="btn" href="../service.html">制作ページ</a>
+              <a class="btn" href="service.html">制作ページ</a>
             </div>
           </section>
 
@@ -554,3 +554,4 @@
 </body>
 
 </html>
+
