--- a/memos.html
+++ b/memos.html
@@ -116,7 +116,7 @@ h1{
       <span class="badge">コメントOK</span>
     </a>
 
-    <a class="card" href="records.html">
+    <a class="card" href="match-public.html">
       <div class="emoji">📒</div>
       <div class="title">対戦の記録</div>
       <div class="desc">あの日の1戦を振り返る</div>
@@ -125,5 +125,4 @@ h1{
   </div>
 </div>
 </body>
-
 </html>
