--- a/match-public.html
+++ b/match-public.html
@@ -522,7 +522,7 @@
   }
 
   async function fetchRows(){
-    const url = `${DATA_URL}?v=${Date.now()}`;
+    const url = `${DATA_URL}?v=${Date.now()}`, { cache: "no-store" });
     const res = await fetch(url, {cache:"no-store"});
     if(!res.ok) throw new Error(`fetch failed: ${res.status}`);
     const rows = await res.json();
