--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
               あなたの世界観、形にしませんか。
             </p>
             <div class="btnrow">
-              <a class="btn" href="service.html">制作ページ</a>
+              <a class="btn primary" href="service.html">制作ページ</a>
             </div>
           </section>
 
