--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
   <script>
     // ★ここだけ書き換えるとリンクが生きます（後からでOK）
     const YOUTUBE_CHANNEL_URL = "https://www.youtube.com/channel/UCrXd_KijTSd_iNUo2H32t0A";   // 例: "https://www.youtube.com/@yourchannel"
-    const LATEST_URL = "https://youtube.com/live/twx6W-o1ulI";            // 例: 最新動画や配信のURL
+    const LATEST_URL = "https://youtu.be/IMyrrpWHIhw";            // 例: 最新動画や配信のURL
     const DECK_BUILDER_URL = "";      // 例: あなたのデッキ構築システムのURL
     const BLOGLINK_URL = "https://shionbodoge.com/";       // ブログURL
     const XLINK_URL = "https://x.com/shionbodoge";       // XURL
@@ -610,4 +610,5 @@
     });
   </script>
 </body>
+
 </html>
