--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             </div>
             <h3>世界を作る部屋</h3>
             <p>
-              あなたの世界観、形にしませんか。
+              配信者向けのWebサイト制作をしています。ご依頼はこちらから。
             </p>
             <div class="btnrow">
               <a class="btn primary" href="service.html">制作ページ</a>
@@ -612,3 +612,4 @@
 </body>
 
 </html>
+
